--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query": "^5.17.19",
+    "@tauri-apps/api": "^1.5.3",
+    "daisyui": "^4.6.0",
+    "jotai": "^2.6.2",
+    "lucide-react": "^0.292.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "prettier": "3.2.4",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
